# nebnechat

./: .gitignore  COOKIE_ISSUES.md  Dockerfile  README.md  __init__.py  app.py  auth.py  chat.py  git_storage.py  github_api_storage.py  local_storage.py  main.py  pyproject.toml  replit.md  setup.py  storage.py  storage_factory.py  test_chat.py  test_github_token.sh  users.yml
.github/workflows/: push2hf.yml
repl_nix_workspace.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
static/: chat.js  style.css
templates/: admin.html  base.html  chat.html  chat_history.html  login.html  register.html
